# ToastRackpp

./: CMakeLists.txt  readme.md
src/: keyboard.hpp  main.cpp  utils.hpp
src/48k/: 48kmemory.hpp  spectrum48k.cpp  spectrum48k.hpp  vram_utils.cpp  vram_utils.hpp  zx48k.hpp  zxmemory48k.cpp  zxmemory48k.hpp
src/48k/cpu/: z80.hpp
src/cpu/: cpulogger.cpp  cpulogger.hpp  debugz80.cpp  debugz80.hpp  instruction.cpp  instruction.hpp  instruction_decode.hpp  iospace.hpp  z80.cpp  z80.hpp  z80bridge.cpp  z80bridge.hpp  z80registers.cpp  z80registers.hpp  z80state.hpp
src/cpu/instruction_tables/: cb_table.cpp  cb_table.hpp  cbprefixtable.cpp  cbprefixtable.hpp  instruction_db.hpp  noprefix_table.cpp  noprefix_table.hpp  noprefixtable.cpp  noprefixtable.hpp
src/cpu/instruction_tables/enums/: cbenums.hpp  ed_enums.hpp  enums.hpp  noenums.hpp
src/cpu/tables/: concepts.hpp  readme.md
src/cpu/tables/enums/: cb_enums.hpp  dd_enums.hpp  ddcb_enums.hpp  ed_enums.hpp  enums.hpp  fd_enums.hpp  fdcb_enums.hpp
src/cpu/tables/instructions/: cb_table.cpp  cb_table.hpp  dd_table.cpp  dd_table.hpp  ddcb_table.cpp  ddcb_table.hpp  ed_table.cpp  ed_table.hpp  fd_table.cpp  fd_table.hpp  fdcb_table.cpp  fdcb_table.hpp  noprefix_table.cpp  noprefix_table.hpp
src/dsm/: cb_prefix_ops.hpp  cb_prefix_table.hpp  ddfd_prefix_ops.hpp  ddfd_prefix_table.hpp  disassemblyOperation.hpp  dsm.hpp  ed_prefix_ops.hpp  ed_prefix_table.hpp  fd_prefix_ops.hpp  fd_prefix_table.hpp  main.cpp  no_prefix_ops.hpp  no_prefix_table.hpp
src/integration/: bridge.hpp  edinstruction.hpp  ijob.hpp  loader.hpp  readme.md
src/io/: colours.hpp  constants.hpp  iomanager.cpp  iomanager.hpp  ioport.hpp  iospace.hpp  keyboard.cpp  keyboard.hpp  port_address.hpp
src/loader/: .baseLoader.hpp.swp  baseLoader.cpp  baseLoader.hpp  readme.md  taploader.hpp  utils.hpp  z80filebitmap.hpp  z80loader.cpp  z80loader.hpp  z80structs.hpp
src/loader/snaloader/: snaloader.cpp  snaloader.hpp
src/loader/taploader/: taploader.hpp
src/loader/z80loader/: decompression.cpp  decompression.hpp  z80decompressor.cpp  z80decompressor.hpp  z80enums.hpp  z80filebitmap.hpp  z80loader.cpp  z80loader.hpp  z80structs.hpp
src/shared/: zxmemory.hpp
src/tests/cpu/: general.cpp  ld_r_r.cpp  readme.md
src/tests/cpu/8bitload/: ld_r_hl.cpp  ld_r_r.cpp
tasks/: ongoing_tasks.txt  readme.md  research.txt
tasks/task_chunks/: 11_10_2024.txt
tests/cpu/: general.cpp  registerdecoding.cpp
tests/cpu/8bitload/: ld_hl_n.cpp  ld_hl_nn.cpp  ld_hl_r.cpp  ld_r_hl.cpp  ld_r_idx.cpp  ld_r_n.cpp  ld_r_r.cpp  readme.md
tests/cpu/bridge/: bridge.cpp
tests/loader/: parses_extension.cpp  tetrisloader.cpp
tests/loader/z80loader/: chunking_big.cpp  chunking_pointer.cpp  chunking_vector.cpp
tests/loader/z80loader/version1/: chunking_version1_pointer.cpp  chunking_version1_vector.cpp
tests/loader/z80loader/version2/: chunking_version2_big.cpp  chunking_version2_pointer.cpp  chunking_version2_vector.cpp
tests/memory/: 48kmemory.cpp  vram.cpp
